Fix blurry images on Chrome

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -53,6 +53,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale; 
     text-rendering: optimizeLegibility;
+    // image-rendering: -webkit-optimize-contrast;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
     max-width: 60%;
     margin: auto;
@@ -64,6 +65,21 @@ body {
     
     @media only screen and (max-width: 1200px) {
         max-width: 95%;
+    }
+}
+
+img {
+    @media screen and (-webkit-min-device-pixel-ratio:0) and (min-resolution:.001dpcm) {
+        image-rendering: -webkit-optimize-contrast !important;
+    }
+
+    /* Unset for Safari 11+ */
+    @media not all and (min-resolution:.001dpcm) { 
+        @supports (-webkit-appearance:none) and (stroke-color:transparent) {
+            img {
+                image-rendering: unset !important;
+            }
+        }
     }
 }
 
